--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Config will store secrets, like Zoom API info
 /config.json
+/server/api/config.py
 
 __pycache__
 
 # Mac indexing file:
 .DS_STORE
+
+/public
