--- a/server/.htaccess
+++ b/server/.htaccess
@@ -1,2 +1,14 @@
 RewriteEngine On
+
+#Force SSL
+RewriteCond %{HTTPS} !=on
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
+
+# Ember.js rules
+RewriteRule ^index\.html$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule (.*) index.html [L]
+
+# API 
 RewriteRule "^api" "/main.py"
