--- a/server/.htaccess
+++ b/server/.htaccess
@@ -4,11 +4,9 @@ RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
 
-# Ember.js rules
+# Ember.js rewrites
 RewriteRule ^index\.html$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.*) index.html [L]
 
-# API 
-RewriteRule "^api" "/main.py"
