Frontent login redirect

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "zoom-manager",
   "version": "0.0.0",
   "private": true,
   "description": "Small description for client goes here",
